# Grokking-Deep-Learning

./: Chapter10 - Intro to Convolutional Neural Networks - Learning Edges and Corners.ipynb
rust/: Cargo.toml
rust/chapter03/: Cargo.toml
rust/chapter06/: Cargo.toml
rust/chapter06/examples/: backpropagation_in_code.rs  learn_the_whole_dataset.rs  put_it_all_together.rs  your_first_deep_neural_network.rs
rust/chapter10/: Cargo.toml  ref.py
rust/chapter10/src/: main.rs
